--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -64,7 +64,7 @@
 }
 
 .card {
-  background-color: #1b2129;
+  background-color: rgb(55 65 81);
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
